test_regress/t/t_disable_genfor_unsup.out
%Error-UNSUPPORTED: t/t_disable_genfor_unsup.v:13:23: Unsupported: Generate block referenced by disable
   13 |           if (i == 5) disable t.genblk[0].init.named;
      |                       ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
